This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: New print's argument "flush" is not mentioned in docstring
Type: Stage: needs patch
Components: Documentation Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: docs@python Nosy List: Daniel.Ellis, docs@python, georg.brandl, orsenthil, python-dev, serhiy.storchaka
Priority: normal Keywords: easy, patch

Created on 2012-08-09 18:40 by serhiy.storchaka, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
print_doc_add_flush.patch Daniel.Ellis, 2012-08-09 18:53 review
Messages (5)
msg167809 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2012-08-09 18:40
New print's argument "flush" is not mentioned in docstring.
msg167813 - (view) Author: Daniel Ellis (Daniel.Ellis) Date: 2012-08-09 18:53
I've updated the docstring.  This is my first time editing a C module, so please let me know if I've done something egregiously wrong.
msg167905 - (view) Author: Georg Brandl (georg.brandl) * (Python committer) Date: 2012-08-10 18:30
LGTM.
msg167913 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-08-10 20:55
New changeset e4877d59613d by Senthil Kumaran in branch 'default':
Fix issue #15607: Update the print builtin function docstring with the new flush keyword.
http://hg.python.org/cpython/rev/e4877d59613d
msg167914 - (view) Author: Senthil Kumaran (orsenthil) * (Python committer) Date: 2012-08-10 21:03
Thanks for raising this issue, Serhiy and thanks for the patch, Daniel. It is committed now.
History
Date User Action Args
2022-04-11 14:57:34adminsetgithub: 59812
2012-08-10 21:03:36orsenthilsetstatus: open -> closed

nosy: + orsenthil
messages: + msg167914

resolution: fixed
2012-08-10 20:55:52python-devsetnosy: + python-dev
messages: + msg167913
2012-08-10 18:30:43georg.brandlsetmessages: + msg167905
2012-08-10 18:27:03serhiy.storchakasetnosy: + georg.brandl
2012-08-09 18:53:13Daniel.Ellissetfiles: + print_doc_add_flush.patch

nosy: + Daniel.Ellis
messages: + msg167813

keywords: + patch
2012-08-09 18:40:14serhiy.storchakacreate