Fix issue #15607: Update the print builtin function docstring with the new flush keyword. Patch contributed by Daniel Ellis.