Python/bltinmodule.c
@@ -1590,13 +1590,14 @@ builtin_print(PyObject *self, PyObject *args, PyObject *kwds)
 }
 
 PyDoc_STRVAR(print_doc,
-"print(value, ..., sep=' ', end='\\n', file=sys.stdout)\n\
+"print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n\
 \n\
 Prints the values to a stream, or to sys.stdout by default.\n\
 Optional keyword arguments:\n\
-file: a file-like object (stream); defaults to the current sys.stdout.\n\
-sep:  string inserted between values, default a space.\n\
-end:  string appended after the last value, default a newline.");
+file:  a file-like object (stream); defaults to the current sys.stdout.\n\
+sep:   string inserted between values, default a space.\n\
+end:   string appended after the last value, default a newline.\n\
+flush: whether to forcibly flush the stream.");
 
 
 static PyObject *
